# StartASM

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
documentation/: Examples.md
include/ast/: AbstractSyntaxTree.h
include/codegen/: CodeGenerator.h
include/compiler/: Compiler.h
src/ast/: AbstractSyntaxTree.cpp
src/codegen/: CodeGenerator.cpp
src/compiler/: Compiler.cpp  StartASM.cpp
src/lexer/: Lexer.cpp
src/main/: Compiler.cpp
src/semantics/: SemanticAnalyzer.cpp
